--- a/package.json
+++ b/package.json
@@ -1,6 +1,18 @@
 {
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "test": "mocha -w \"./test/**/*.js\""
+  },
   "dependencies": {
+    "assert": "^1.4.1",
     "body-parser": "^1.17.2",
-    "express": "^4.15.4"
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
+    "express": "^4.15.4",
+    "faker": "^4.1.0",
+    "lodash": "^4.17.4",
+    "mocha": "^3.5.0",
+    "sinon": "^3.2.1"
   }
 }
