--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chai-http": "^3.0.0",
     "express": "^4.15.4",
     "faker": "^4.1.0",
+    "jsonapi-serializer": "^3.5.5",
     "lodash": "^4.17.4",
     "mocha": "^3.5.0",
     "sinon": "^3.2.1"
