--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jsonapi-serializer": "^3.5.5",
     "lodash": "^4.17.4",
     "mocha": "^3.5.0",
+    "node-mocks-http": "^1.6.4",
     "sinon": "^3.2.1"
   }
 }
