--- a/logfile-web/package.json
+++ b/logfile-web/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "lodash": "^4.17.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-redux": "^5.0.6"
+    "react-redux": "^5.0.6",
+    "recompose": "^0.25.0",
+    "redux-form": "^7.0.4",
+    "redux-observable": "^0.16.0",
+    "rxjs": "^5.4.3"
   },
   "devDependencies": {
     "react-scripts": "1.0.13"
