--- a/logfile-api/package.json
+++ b/logfile-api/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.17.2",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
+    "cors": "^2.8.4",
     "express": "^4.15.4",
     "faker": "^4.1.0",
     "jsonapi-serializer": "^3.5.5",
