--- a/logfile-web/package.json
+++ b/logfile-web/package.json
@@ -17,7 +17,9 @@
     "rxjs": "^5.4.3"
   },
   "devDependencies": {
-    "react-scripts": "1.0.13"
+    "node-sass": "^4.5.3",
+    "react-scripts": "1.0.13",
+    "sass-loader": "^6.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
