--- a/logfile-api/package.json
+++ b/logfile-api/package.json
@@ -1,8 +1,8 @@
 {
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "mocha -w \"./test/**/*.js\""
+    "start": "NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=production nodemon index.js",
+    "test": "NODE_ENV=test mocha -w \"./test/**/*.js\""
   },
   "dependencies": {
     "assert": "^1.4.1",
