--- a/logfile-web/package.json
+++ b/logfile-web/package.json
@@ -40,6 +40,8 @@
     "react-redux": "^5.0.6",
     "recompose": "^0.25.0",
     "redux": "^3.7.2",
+    "redux-devtools-dock-monitor": "^1.1.2",
+    "redux-devtools-log-monitor": "^1.3.0",
     "redux-form": "^7.0.4",
     "redux-observable": "^0.16.0",
     "rxjs": "^5.4.3",
@@ -53,6 +55,7 @@
   },
   "devDependencies": {
     "node-sass": "^4.5.3",
+    "redux-devtools": "^3.4.0",
     "sass-loader": "^6.0.6"
   },
   "scripts": {
